# QSpecBench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: adapter_protocol.md  adding_a_benchmark.md  ai_formalization_track.md  algorithm_track.md  audit_findings.md  benchmark_paper_outline.md  bridge_codegen_design.md  claim_model.md  equivalence_track.md  evidence_model.md  hamiltonian_track.md  index.md  lean_setup.md  operational_semantics.md  qec_external_certificates.md  qec_track.md  reference_benchmarks.md  roadmap.md  schema_migration_0.2.md  schema_reference.md  semantic_bridge.md  status.md  trust_boundaries.md  versioning.md
lean/: QSpecBench.lean  lake-manifest.json  lakefile.lean
schema/: bridge_result.schema.json  bridge_theorem_manifest.json  channel.schema.json  correction_table.schema.json  error_model.schema.json  hamiltonian.schema.json  provenance.schema.json  qec_code.schema.json  qec_external_certificate.schema.json  qec_witness.schema.json  qspecbench.schema.json  resource_contract.schema.json  semantic_bridge.schema.json  syndrome_table.schema.json
scripts/: add_reference_proof_obligations.py  apply_remaining_work.py  backfill_p1_corpus.py  backfill_p2.py  complete_scientific_depth.py  enrich_corpus.py  export_theorem_types.py  layer3_finalize.py  lift_seed_evidence.py  p0_migration.py  p1_reference_patch.py  promote_reference_benchmarks.py  run_claim_diff_all.py  scaffold_benchmarks.py  scaffold_layer3_expansion.py  sync_kernel_artifact_sources.py  (+3 more)
(+644 files in other folders)
