[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "qspecbench"
version = "0.1.0"
description = "Community-grade benchmark and evidence format for quantum formal verification"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
qspecbench = "qspecbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tools/qspecbench"]

[tool.hatch.build.targets.wheel.sources]
"tools/qspecbench" = "qspecbench"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools"]

[tool.ruff]
line-length = 100
target-version = "py310"
